# e5-hchb-training-poc

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.MD  activate_conda_linux.sh  package-lock.json  package.json  pyproject.toml  start_fb_worker_linux.sh  start_fb_worker_windows.bat
.jfrog/projects/: poetry.yaml
code/: app.py  init.sh
code/robots/: init_fb_worker.robot  start.robot
code/robots/exceptions/: Exception.resource
code/robots/functionblocks/: FB_AddCareCoordinationNotes.robot  README.MD
code/robots/functions/: FN_AddCareCoordinationNote.resource  FN_CloseWindows.resource  FN_Login.resource  FN_OpenCareCoordinationNote.resource  FN_OpenMenu.resource  FN_PanelFilter.resource  README.MD
code/robots/modules/: README.MD
code/robots/modules/components/common/: README.MD
code/robots/modules/screens/: README.MD
code/robots/modules/screens/common/: README.MD  SCREEN_CitrixDesktop.resource  SCREEN_HCHBLogin.resource
code/robots/resources/: variables.resource
code/schema/: configuration_schema.json  request_schema.json
code/yamls/: fb-exceptions.yaml  function-exceptions.yaml  module-exceptions.yaml  selectors.yaml
